--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -56,6 +56,7 @@
   line-height: 1;
   font-weight: bold;
   padding: 12px;
+  text-align: center;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   border-radius: 2px;
