--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -53,9 +53,9 @@
 } */
 
 .d3-tip {
-  line-height: 1;
-  font-weight: bold;
-  padding: 12px;
+  line-height: 1.3;
+  /*font-weight: bold; */
+  padding: 11px;
   text-align: center;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
